# hermes-blind

./: .gitignore  .hermes-seal.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTENT.md  PLAN-v1.md  PLAN-v2.md  README.md  SECURITY.md  llms.txt  pyproject.toml  sbom.cdx.json
.github/workflows/: ci.yml
assets/: preview-source.txt  preview-spec.md
rubric-runs/: phase1-claude.json  phase1-meta-rubric.json  phase1-v2.json  phase3-adversarial.json
src/hermes_blind/: __init__.py  scaffold.py
tests/: test_graceful_degrade.py  test_scaffold.py
