[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-blind"
version = "0.0.6"
description = "Context-compensation scaffold for LLM evaluation prompts — disclose, gate on evidence, hedge on thin"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Hermes Labs", email = "rbosch@lpci.ai" }]
keywords = ["llm", "prompt-engineering", "debiasing", "scaffold", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
"Source" = "https://github.com/hermes-labs-ai/hermes-blind"
"Issues" = "https://github.com/hermes-labs-ai/hermes-blind/issues"
"Changelog" = "https://github.com/hermes-labs-ai/hermes-blind/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # let formatter handle line length
